Fix double scroll issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,7 @@ html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  overflow-y: visible;
 }
 
 body {
